# research-assistant

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py  mlflow-query.ipynb  pyproject.toml
.gemini/: config.yaml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
agent/: chat_adapter.py  core.py  tools.py
api/: __main__.py  routes.py  services.py
api/chat/: routes.py  services.py
api/ocr/: models.py  routes.py  services.py
api/paper/: models.py  routes.py  services.py
arxiv_parser/: __init__.py  latex_parser.py  parser.py  utils.py
core/: logger.py
database/: __init__.py  qdrant.py  supabase.py
graph/: config.py
graph/insert/: cyphers.py  operations.py
graph/traverse/: cyphers.py  operations.py
ingestion/arxiv/: download.py  parse.py  pipeline.py  read.py
llm/: agent.py  tools.py
memory/: __init__.py  base.py  mem0.py  raw.py
ocr/: __init__.py  constants.py  graphor.py  utils.py
rag/: __init__.py  arxiv_rag.py  qdrant.py  utils.py
utils/: agent_executor.py  chat_adapter.py
